[package]
name = "gzdoom-discordrpc"
version = "0.1.1"
authors = ["Ash <valleyknight@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
discord-rpc-client = "0.3.0"
fancy-regex = "0.4.0"
window_titles = { git = "https://github.com/HiruNya/window_titles" }